# rag_assistant

./: .gitignore  README.md  app.py  assistant.py  config.py  docker-compose.yml  document_collections.py  index_docs.py  llm.py  pyproject.toml  requirements.txt  utils.py  vectorstore.py
input_formats/: audio.py  base.py  text.py
