[tool.poetry]
name = "interview_assistant"
version = "0.1.0"
description = ""
authors = ["Siarhei Hinkou <s.ginkov@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11,<3.12"
requests = "^2.31.0"
rich = "^13.7.1"
torch = "^2.2.1"
openai-whisper = {git = "https://github.com/openai/whisper.git"}
sounddevice = "^0.4.6"
suno-bark = {git = "https://github.com/suno-ai/bark.git"}
speechrecognition = "^3.10.1"
pyaudio = "^0.2.14"
langchain = "^0.1.13"
nltk = "^3.8.1"
langchain_community = "^0.0.34"
numpy = "^1.26.4"
openai_whisper = "20231117"
PyYAML = "^6.0.1"
gpt4all = "^2.6.0"
elasticsearch = "^8.13.0"
langchain-elasticsearch = "^0.1.3"
pypdf = "^4.2.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"